# gram-positive-drug-target-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run_pipeline.py
pipeline/: __init__.py  alphafold.py  classifier.py  cli.py  config.py  essentiality.py  features.py  manifest.py  pockets.py  proteome.py  scoring.py  selectivity.py  utils.py  validation.py  visualization.py
