[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "drug-target-pipeline"
version = "2.1.0"
description = "Gram-positive antibacterial drug-target discovery pipeline"
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0",
    "pandas>=2.0",
    "scikit-learn>=1.4",
    "biopython>=1.80",
    "requests>=2.28",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
boost = ["xgboost>=2.0"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
drug-target-pipeline = "pipeline.cli:main"

[tool.setuptools.packages.find]
include = ["pipeline*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
